--- a/index.html
+++ b/index.html
@@ -2,9 +2,150 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <m8eta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Transform</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-1"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-2"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-3"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-4"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-5"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-6"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-7"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-8"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-9"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-10"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container margin-top">
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-11"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-12"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container margin-top">
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-13"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-14"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container margin-top">
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-15"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-16"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-17"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-18"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-19"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-20"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-21"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-22"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-23"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-24"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container margin-top">
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-25"></div>
+        </div>
+      </div>
+      <div class="box-wrapper">
+        <div class="background">
+          <div class="box box-26"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
